--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,11 @@
   "main": "index.js",
   "scripts": {
     "seed": "psql -U postgres < seed.sql",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "npx concurrently \"npx nodemon --config nodemon-ts.json\" \"npx nodemon --config nodemon-app.json",
+    "dev:tsc": "npx nodemon --config nodemon-ts.json",
+    "dev:app": "npx nodemon --config nodemon-app.json",
+    "build": "npx tsc -v -b"
   },
   "author": "",
   "license": "ISC",
@@ -15,7 +19,11 @@
     "pg": "^8.11.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/pg": "^8.10.2",
+    "concurrently": "^8.2.0",
     "nodemon": "^2.0.22",
-    "psql": "^0.0.1"
+    "typescript": "^5.1.6"
   }
 }
