--- a/server/package.json
+++ b/server/package.json
@@ -9,11 +9,15 @@
     "dev": "npx concurrently \"npx nodemon --config nodemon-ts.json\" \"npx nodemon --config nodemon-app.json",
     "dev:tsc": "npx nodemon --config nodemon-ts.json",
     "dev:app": "npx nodemon --config nodemon-app.json",
+    "dev:prisma": "npx prisma db pull && npx prisma generate",
+    "prisma:load": "npx prisma db pull ",
+    "prisma:generate": "npx prisma generate",
     "build": "npx tsc -v -b"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^4.16.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "pg": "^8.11.0"
